style: 优化代码与配置UI